--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<p>" Weather API developpers support "</p>
 	</div>
 <div class="brownfox-logo">
-	<h1>BORWNF<span>0</span>X</h1>
+	<h1>BROWNF<span>0</span>X</h1>
 </div>
 	<ul>
 		<li class="dev-details">Dev Details</li>
